SERVER-11220 empty_cluster_init.js longer timeout for long startup hang